--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "event-platform",
+  "author": "Gui Domingues <guidominguesdev@gmail.com>",
+  "version": "1.0.1",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -18,8 +19,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "tailwind": "^4.0.0"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
