--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "useTabs": false,
   "singleQuote": true,
   "trailingComma": "all",
-  "arrowParens": "avoid",
-  "jsxSingleQuote": true
+  "arrowParens": "avoid"
 }
