--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.8",
+    "@stitches/react": "^1.2.8",
     "@vime/core": "^5.3.1",
     "@vime/react": "^5.3.1",
     "classnames": "^2.3.1",
