--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Logs
 logs
 *.log
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -24,3 +26,6 @@ dist-ssr
 *.sw?
 
 .env.local
+
+# vercel
+.vercel
